--- a/templates/band/public/band.html.twig
+++ b/templates/band/public/band.html.twig
@@ -24,4 +24,21 @@
         </div>
     </div>
 
+    <div class="container">
+
+    <div class="card-deck">
+    {% for concert in concerts %}
+        {% if concert.date|date('Y-m-d') > "now"|date('Y-m-d') and band in concert.bands %}
+            <div class="card" style="width: 18rem;margin: 10px;">
+                <div class="card-body">
+                    <div class="card-title">{{ concert.date|date('d/m/Y') }} </div>
+                    <p class="card-text">{{ concert.tourName|e }}</p>
+                    <a href="#" class="card-link">Détails</a>
+                </div>
+            </div>
+        {% endif %}
+    {% endfor %}
+    </div>
+    </div>
+
 {% endblock %}
